frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sarraf-frontend-service
  namespace: NAMESPACE_PLACEHOLDER
  labels:
    app: sarraf-frontend
spec:
  selector:
    app: sarraf-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
