frontend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sarraf-ingress
  namespace: sarraf-dev
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "sarraf-static-ip"
    networking.gke.io/managed-certificates: "sarraf-ssl-cert"
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: sarraf.omerops.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: sarraf-frontend-service
            port:
              number: 80
  - host: api.omerops.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: sarraf-backend-service
            port:
              number: 80
  - host: omerops.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: sarraf-frontend-service
            port:
              number: 80
